refactor: List.get(0)을 List.getFirst()로 변경